v0.0.1/modules/schema/pages/class/Shift.adoc
= `Shift`
:toclevels: 4


+++Generally referring to a period of operation or work performed. Whether the shift is open/closed can be derived from attributes 'activityInterval.start' and 'activityInterval.end'.
The grand total for receipts (i.e., cumulative total of all actual receipted amounts during this shift; bankable + non-bankable; excludes rounding error totals) can be derived from receipt:
=sum('Receipt.receiptAmount'); includes bankable and non-bankable receipts.
It also has to be reconciled against:
=sum('receiptsGrandTotalBankable' + 'receiptsGrandTotalNonBankable')
and against receipt summary:
=sum('ReceiptSummary.receiptsTotal').
The attributes with "GrandTotal" defined in this class may need to be used when the source data is periodically flushed from the system and then these cannot be derived.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Shift`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Shift`*
 *** xref::class/CashierShift.adoc[`CashierShift`]
 *** xref::class/VendorShift.adoc[`VendorShift`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Shift {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DateTimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}













DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Shift -> DateTimeInterval: activityInterval







Shift -> DiagramObject: DiagramObjects


Shift -> InstanceSet: InstanceSet


Shift -> Name: Names


Shift -> ChangeSetMember: PropertiesCIMDataObject


Shift -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<activityInterval,`activityInterval`>>
| 0..1
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Interval for activity of this shift.+++

| <<receiptsGrandTotalBankable,`receiptsGrandTotalBankable`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = true.+++

| <<receiptsGrandTotalNonBankable,`receiptsGrandTotalNonBankable`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = false.+++

| <<receiptsGrandTotalRounding,`receiptsGrandTotalRounding`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt attributes:
=sum(Receipt.receiptRounding).+++

| <<transactionsGrandTotal,`transactionsGrandTotal`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative total of transacted amounts during this shift. Values are obtained from transaction:
=sum('Transaction.transactionAmount'). It also has to be reconciled against transaction summary:
=sum('TransactionSummary.transactionsTotal').+++

| <<transactionsGrandTotalRounding,`transactionsGrandTotalRounding`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from Transaction attributes:
=sum(Transaction.transactionRounding).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#activityInterval]
=== `activityInterval`
+++Interval for activity of this shift.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.activityInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#receiptsGrandTotalBankable]
=== `receiptsGrandTotalBankable`
+++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#receiptsGrandTotalNonBankable]
=== `receiptsGrandTotalNonBankable`
+++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = false.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalNonBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#receiptsGrandTotalRounding]
=== `receiptsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt attributes:
=sum(Receipt.receiptRounding).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#transactionsGrandTotal]
=== `transactionsGrandTotal`
+++Cumulative total of transacted amounts during this shift. Values are obtained from transaction:
=sum('Transaction.transactionAmount'). It also has to be reconciled against transaction summary:
=sum('TransactionSummary.transactionsTotal').+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotal`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#transactionsGrandTotalRounding]
=== `transactionsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from Transaction attributes:
=sum(Transaction.transactionRounding).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===


