v1.1.0/modules/schema/pages/class/Shift.adoc
= `Shift`
:toclevels: 4


+++Generally referring to a period of operation or work performed. Whether the shift is open/closed can be derived from attributes 'activityInterval.start' and 'activityInterval.end'.
The grand total for receipts (i.e., cumulative total of all actual receipted amounts during this shift; bankable + non-bankable; excludes rounding error totals) can be derived from receipt:
=sum('Receipt.receiptAmount'); includes bankable and non-bankable receipts.
It also has to be reconciled against:
=sum('receiptsGrandTotalBankable' + 'receiptsGrandTotalNonBankable')
and against receipt summary:
=sum('ReceiptSummary.receiptsTotal').
The attributes with "GrandTotal" defined in this class may need to be used when the source data is periodically flushed from the system and then these cannot be derived.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Shift`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Shift`*
 *** xref::class/CashierShift.adoc[`CashierShift`]
 *** xref::class/VendorShift.adoc[`VendorShift`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<activityInterval,`activityInterval`>>
//| [[slots_table.activityInterval]]<<activityInterval,`activityInterval`>>
| 0..1 +
xref::class/DateTimeInterval.adoc[`DateTimeInterval`]
| +++Interval for activity of this shift.+++
| _n/a_

| <<receiptsGrandTotalBankable,`receiptsGrandTotalBankable`>>
//| [[slots_table.receiptsGrandTotalBankable]]<<receiptsGrandTotalBankable,`receiptsGrandTotalBankable`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained...+++
| _n/a_

| <<receiptsGrandTotalNonBankable,`receiptsGrandTotalNonBankable`>>
//| [[slots_table.receiptsGrandTotalNonBankable]]<<receiptsGrandTotalNonBankable,`receiptsGrandTotalNonBankable`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained...+++
| _n/a_

| <<receiptsGrandTotalRounding,`receiptsGrandTotalRounding`>>
//| [[slots_table.receiptsGrandTotalRounding]]<<receiptsGrandTotalRounding,`receiptsGrandTotalRounding`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt...+++
| _n/a_

| <<transactionsGrandTotal,`transactionsGrandTotal`>>
//| [[slots_table.transactionsGrandTotal]]<<transactionsGrandTotal,`transactionsGrandTotal`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Cumulative total of transacted amounts during this shift. Values are obtained from...+++
| _n/a_

| <<transactionsGrandTotalRounding,`transactionsGrandTotalRounding`>>
//| [[slots_table.transactionsGrandTotalRounding]]<<transactionsGrandTotalRounding,`transactionsGrandTotalRounding`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#activityInterval]
=== `activityInterval`
+++Interval for activity of this shift.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.activityInterval`
| Cardinality
| 0..1
| Type
| xref::class/DateTimeInterval.adoc[`DateTimeInterval`]


|===

////
[.text-left]
--
<<slots_table.activityInterval,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#receiptsGrandTotalBankable]
=== `receiptsGrandTotalBankable`
+++Total of amounts receipted during this shift that can be manually banked (cash and cheques for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.receiptsGrandTotalBankable,&#10548;>>
--
////


//[discrete]
[#receiptsGrandTotalNonBankable]
=== `receiptsGrandTotalNonBankable`
+++Total of amounts receipted during this shift that cannot be manually banked (card payments for example). Values are obtained from Receipt attributes:
=sum(Receipt.receiptAmount) for all Receipt.bankable = false.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalNonBankable`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.receiptsGrandTotalNonBankable,&#10548;>>
--
////


//[discrete]
[#receiptsGrandTotalRounding]
=== `receiptsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in receiptsGrandTotal. Values are obtained from Receipt attributes:
=sum(Receipt.receiptRounding).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.receiptsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.receiptsGrandTotalRounding,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#transactionsGrandTotal]
=== `transactionsGrandTotal`
+++Cumulative total of transacted amounts during this shift. Values are obtained from transaction:
=sum('Transaction.transactionAmount'). It also has to be reconciled against transaction summary:
=sum('TransactionSummary.transactionsTotal').+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotal`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.transactionsGrandTotal,&#10548;>>
--
////


//[discrete]
[#transactionsGrandTotalRounding]
=== `transactionsGrandTotalRounding`
+++Cumulative amount in error due to process rounding not reflected in transactionsGandTotal. Values are obtained from Transaction attributes:
=sum(Transaction.transactionRounding).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Shift.transactionsGrandTotalRounding`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.transactionsGrandTotalRounding,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
